layout/generic/nsSubDocumentFrame.cpp
@@ -1413,7 +1413,7 @@ bool nsDisplayRemote::CreateWebRenderCommands(
   auto rect = LayoutDeviceRect::FromAppUnits(destRect, auPerDevPixel);
   rect += mOffset;
 
-  aBuilder.PushIFrame(mozilla::wr::ToLayoutRect(rect), !BackfaceIsHidden(),
+  aBuilder.PushIFrame(rect, !BackfaceIsHidden(),
                       mozilla::wr::AsPipelineId(mPaintData.mLayersId),
                       /*ignoreMissingPipelines*/ true);
 
